# deep_trip

./: .env.example  PRODUCT_CONCEPT.md  README.md  ROADMAP.md  agora_manager.py  config.py  conftest.py  create_issues.sh  main.py  minimax_client.py  requirements.txt  setup_and_run.sh  setup_extension.sh
deep_trip/: addon.py  demo_fallback.py  extension.py  manifest.json  openclaw_client.py  property.json  requirements.txt
deep_trip/tests/: test_cultural_accuracy.py  test_extension.py  test_integration.py  test_openclaw_client.py  test_openclaw_live.py
demo/: demo_script.md  preflight_check.py
scripts/: cultural_qa_eval.py  measure_latency.py  send_location.py  verify_minimax.py
tenapp/: agora_cache.db  main.go  manifest-lock.json  manifest.json  property.json
tenapp/ten_packages/extension/: deep_trip  deepgram_asr_python  minimax_tts_websocket_python  openai_llm2_python  (+1 more)
tenapp/ten_packages/system/ten_runtime_python/: manifest.json  pyproject.toml  requirements.txt
tenapp/ten_packages/system/ten_runtime_python/.ten/package_info/: installed_paths.json
tenapp/ten_packages/system/ten_runtime_python/interface/ten_runtime/: __init__.py  async_extension.py  async_ten_env.py  async_test.py  global_thread_manager.py  libten_runtime_python.pyi  log_option.py  send_options.py  ten_env_base.py  test.py  test_base.py  trigger_life_cycle_cmd.py  value.py  value_buffer.py
tenapp/ten_packages/system/ten_runtime_python/tools/: cython_compiler.py  deps_resolver.py  find_libpython.py  update_root_pyproject.py
test_client/: cert.pem  index.html  key.pem  server.py
(+101 files in other folders)
