#
# Copyright © 2025 Agora
# This file is part of TEN Framework, an open source project.
# Licensed under the Apache License, Version 2.0, with certain conditions.
# Refer to the "LICENSE" file in the root directory for more information.
#

[project]
name = "ten-runtime-python"
version = "0.1.0"
description = "TEN Framework"
requires-python = ">=3.10"
dependencies = ["namedthreads", "uvloop; sys_platform != 'win32'"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
ignore-vcs = true
packages = ["interface/ten_runtime"]

[tool.hatch.build.targets.editable]
# Make editable mode create .pth files instead of copying.
dev-mode-exact = true
